--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>TiffinAdmin Pro</title>
     <!-- Favicon to prevent 404 -->
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+    <link rel="manifest" href="/manifest.webmanifest">
     
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
